[gd_scene load_steps=3 format=2]

[ext_resource path="res://Chapters/Chapter_1/Chapter_1.gd" type="Script" id=1]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=2]

[node name="Chapter_1" type="Node"]
script = ExtResource( 1 )

[node name="UI" parent="." instance=ExtResource( 2 )]

[connection signal="request_action" from="UI/Cursor" to="." method="_on_Cursor_request_action"]
[connection signal="request_room_change" from="UI/Cursor" to="." method="_on_Cursor_request_room_change"]

[editable path="UI"]
